# TREKOPES_BACKEND

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  backup.txt  docker-compose.yml  pyproject.toml  scripts.sql
alembic/: env.py
app/: app.py  database.py  main.py
app/bot/: bot.py
app/core/: config.py  logger.py
app/crud/: news.py  track.py
app/interfaces/: storage.py
app/models/: news.py  track.py
app/routers/: assistant.py  chat.py  news.py  payment.py  song.py  track.py
app/schemas/: news.py  payment.py  song.py  track.py
app/services/: storage.py
